--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,7 +11,6 @@
 	font-family: 'Asap', sans-serif;
 	}
 
-
 body {
 	font-family: 'Asap', sans-serif;
     margin: 0px;
@@ -19,30 +18,39 @@ body {
     background-color: gray;
 }
 
+a { 
+    text-shadow: 0px;
+    }
 
 .container-fluid {
     color: white;
 }
 
 .container-fluid-pink {
-	background-color:  rgb(255,183,172);
+	background-color: rgb(255,183,172);
 	color: white;
-	}
+	height:100%;}
 
 .main_logo {
     position:absolute;
-    width: 60%;
-    z-index:999;
-    right: 20%;
-    top: 12%;
+    width: 100%;
+    z-index:1000;
 }
 
 .bg_logo {
 	position:absolute;
     width: 100%;
 	}
+	
+.home_logo {
+    position:fixed;
+    width: 200px;
+    z-index:99999;
+    left:20px;
+    }
 
 .img_bg{
+    z-index:999;
 	position:absolute;
 	height: 100%;
 	overflow: hidden;
@@ -96,6 +104,15 @@ body {
 	padding:15px;
 	text-align:center;
 	}
+	
+.form_text #user_password_confirmation{
+    width:100%;
+	height: 40px;
+	border:0px;
+	color: rgb(100,100,100);
+	padding:15px;
+	text-align:center;
+}
 
 .submit_bt {
 	width:100%;
@@ -105,6 +122,23 @@ body {
 	background-color: rgb(100,100,100);
 	padding:5px;
 	}
+	
+.eval_bt {
+	width:100%;
+	height: 35px;
+	text-align:center;
+	color: white;
+	border-radius: 0px;
+	background-color:rgb(255,183,172);
+	padding:10px;
+	}
+	
+.btn-group{
+   border-radius: 6px;
+   border:0px;
+   padding:10px;
+}	
+
 
 /* --------------mypage-------------- */
 
@@ -131,6 +165,7 @@ body {
 }
 
 .profile_bg {
+    margin-top:50px;
     z-index:1;
     background-color: rgb(100,100,100);
     padding: 50px;
@@ -149,13 +184,26 @@ body {
     border:0px;
 }
 
+.navbar-fixed-top {
+    background-color: rgb(220,220,220);
+    }
+
 .navbar-nav a{
     color: rgb(100,100,100);
 }
 
+.navbar-nav a:hover{
+    color: rgb(255,183,172);
+    background-color: rgb(220,220,220);
+}
+.navbar-nav > li > a {
+    text-shadow : 0px 0px 0px;
+    }
+
 .navbar-center {
-    padding-right: 30px;
-    padding-left: 30px;
+    width:100%;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .reco{
@@ -165,6 +213,7 @@ body {
 }
 
 .product_div{
+    max-width: 400px;
     padding: 30px;
 }
 
@@ -176,6 +225,7 @@ body {
 }
 
 .product_img{
+    margin-top: expression(( 150 - this.height ) / 2);
     width: 100%;
 }
 
