--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,39 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container-fluid-pink">
+  <%= image_tag("bg3.png", :class => "bg_logo") %>
+  <div class="row-high" style="z-index:999;">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 head_name">Forgot your password?</div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+  
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="col-md-4 col-sm-2"></div>
+          <div class="col-md-4 col-sm-8 form_text">  
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= devise_error_messages! %>
+
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true %>
+          </div><br/><br/>
+
+          <div class="actions">
+            <%= f.submit "Send me reset password instructions", :class => 'submit_bt' %>
+          </div><br/><br/>
+          <% end%>
+
+          <%= render "devise/shared/links" %>
+          
+         <div class="col-md-4 col-sm-2"></div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+</div>
