--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,15 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container-fluid-pink">
+  <%= image_tag("bg3.png", :class => "bg_logo") %>
+  <div class="row-high" style="z-index:999;">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 head_name">>Edit <%= resource_name.to_s.humanize %></div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
