--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,59 @@
-<h2>Sign up</h2>
+<div class="container-fluid-pink">
+  <%= image_tag("bg3.png", :class => "bg_logo") %>
+  <div class="row-high" style="z-index:999;">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 head_name">Sign up</div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="col-md-4 col-sm-2"></div>
+          <div class="col-md-4 col-sm-8 form_text">  
+    <%= f.label :email %><br/>
+    <%= f.email_field :email, autofocus: true %><br/><br/>
+    
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
+    
+    
+    <%= f.password_field :password, autocomplete: "off" %><br/><br/>
+    <%= f.label :password_confirmation %><br/>
+    <%= f.password_field :password_confirmation, autocomplete: "off"  %><br/><br/><br/>
+    
+    <% end %>
+   
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :class => 'submit_bt' %><br/><br/>
+    <%= render "devise/shared/links" %>
   </div>
-<% end %>
+  </div>
+   <div class="col-md-4 col-sm-2"></div>
+</div>
 
-<%= render "devise/shared/links" %>
+ <% end %><!-- form 끝 -->
+
+      <div class="row">
+        <div class="col-md-12 ">
+          <div class="col-md-4 col-sm-2"></div>
+          <div class="col-md-4 col-sm-8 form_text">
+            <div class="fb-like"
+              data-share="true"
+              data-width="450"
+              data-show-faces="true">
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-2"></div>
+        </div>
+      </div>
+  </div><!-- row-high -->
+</div>
+</div>
