--- a/app/views/home/evalpage.erb
+++ b/app/views/home/evalpage.erb
@@ -1,90 +1,131 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-<!-- main menu -->
-<a href="/users/sign_in">
-	<%=image_tag( "home.png", :class=> "home_logo") %></a>
-<nav id="navbar" class="navbar navbar-fixed-top">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-4 col-sm-3 col-xs-6"></div>
-			<div class="col-md-4 col-sm-8 col-xs-6">
-				<div class="navbar-center">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="evalpage">Smelling</a></li>
-						<li>
-							<a href="mypage">
-								<%=@user.email%>
-							</a>
-						</li>
-						<li><a href='/users/sign_out'> Log out </a> </li>
-					</ul>
-				</div>
+<div class="navbar-fixed-top">
+
+  <!-- main menu -->
+  <a href="/users/sign_in">
+    <%=image_tag( "home.png", :class=> "home_logo") %></a>
+  <nav id="navbar" class="navbar nav-top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8 col-sm-3 col-xs-6"></div>
+        <div class="col-md-4 col-sm-8 col-xs-6">
+          <div class="navbar-center">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="evalpage">Smelling</a></li>
+              <li>
+                <a href="mypage">
+                  <%=@user.email%>
+                </a>
+              </li>
+              <li><a href='/users/sign_out'> Log out </a> </li>
+            </ul>
+          </div>
+        </div>
+        <div class=" col-sm-1 "></div>
+      </div>
+    </div>
+  </nav>
+  <!-- main menu end -->
+
+  <!-- user index -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 profile_bg">
+
+        <div class="col-md-4"></div>
+        <div class="col-md-4 profile_div">
+          <img class="img-circle profile_img" src="https://scontent.cdninstagram.com/hphotos-xaf1/t51.2885-15/s320x320/e15/11313370_1434376700214927_1359520543_n.jpg">
+          <br>
+          <br>
+          <%=@user.email%>
+        </div>
+        <div class="col-md-4"></div>
+
+        <!--%= image_tag("background.jpg", :class => "profile_bg_img") %-->
+      </div>
+    </div>
+  </div>
+  <!-- user index end -->
+
+  <!-- low menu -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="main_head">
+            Smelling
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- low menu end -->
+
+</div>
+<!-- fixed end-->
+
+
+<div class="container-fluid">
+<div class="row reco first_div">
+ <div class="col-md-12">
+  <!--<div class="col-md-12 e_heade_name">Smelling</div>-->
+ 	<div class="row">
+     <div class="col-md-3 drop">
+	  <div class="dropdown">
+	    <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    상품 종류 &nbsp;
+	    <span class="caret"></span>
+	    </button>
+	  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+	    <li type=""><a href="">바디클렌저</a></li>
+	    <li><a href="http://facebook.com">비누</a></li>
+	    <li><a href="http://facebook.com">핸드크림</a></li>
+	    <li><a href="#">샴푸/컨디셔너/트리트먼트</a></li>
+	    <li><a href="#">남자향수</a></li>
+	    <li><a href="#">여자향수</a></li>
+	    <li><a href="#">방향제</a></li>
+	    <li><a href="#">양키캔들</a></li>
+	  </ul>
+	</div>
+   </div>
+ </div>
+</div>
+
+
+<div class="tab-content container-fluid">
+	<div role="tabpanel" class="tab-pane fade in active" id="tab-home">
+		<div class="row reco">
+			<div class="col-md-12">
+				<% @products.sort_by{rand}.each do |product| %>
+					<div class="col-sm-6 col-md-3 product_div" product-id="<%= product.id %>">
+						<div class="col-md-12 product_box">
+							<div class="col-md-3 product_select"><span class="heart-empty"></span></div>
+							<div class="col-md-6"></div>
+							<div class="col-md-3 product_wish"><span class="bookmark-empty"></span></div>
+							<div class="product_crop">
+							<img class="product_img" src="<%=product.imglink %>" onerror="if (this.src != 'http://golsonsonline.com/catalog/view/theme/Golsons/image/cat_not_found.png') 
+							this.src = 'http://golsonsonline.com/catalog/view/theme/Golsons/image/cat_not_found.png';">
+							</div>
+							<div class="caption">
+								<!--<p class="text-center"><span><%= product.brand %></span></p>-->
+								<div class="col-md-12 product_name ellip"><span><%= product.name %></span></div>
+								<p id="product-<%= product.id %>" class="text-center">
+									<a class="col-md-6 eval_bt btn btn-rate rate-like" style="border-radius: 0px;" role="button">좋아함</a>
+									<a class="col-md-6 eval_bt btn btn-rate rate-dislike" style="border-radius: 0px;" role="button">싫어함</a>
+									<a class="col-md-6 product_span btn btn-rate rate-wish" role="button"><span class="glyphicon glyphicon-bookmark"></span><br>관심취향</a>
+									<div class="col-md-6 product_span"><span class="glyphicon glyphicon-user"></span><br>코멘트보기</div>
+								</p>
+							</div>
+						</div>
+					</div>
+				<% end %>
 			</div>
-			<div class="col-md-4 col-sm-1"></div>
 		</div>
 	</div>
-</nav>
-<!-- main menu end -->
+</div>
+</div>
 
-
-
-		<!-- Split button -->
-		<div class="container-fluid">
-			<div class = "row reco">
-			<h1 class="text-center">Smellow</h1>
-				<div class="col-md-12">
-					<div class="btn-group">
-						<div class="col-md-3">
-							<button type="button" class="btn btn-danger">Action</button>
-							<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								<span class="caret"></span>
-								<span class="sr-only">Toggle Dropdown</span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><a href="#">Action</a></li>
-								<li><a href="#">Another action</a></li>
-								<li><a href="#">Something else here</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="#">Separated link</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		<div class="tab-content container-fluid">
-			<div role="tabpanel" class="tab-pane fade in active" id="tab-home">
-				<div class="container reco">
-					<div class="col-md-12">
-						<% @products.sort_by{rand}.each do |product| %>
-							<div class="col-sm-6 col-md-3 product_div" product-id="<%= product.id %>">
-
-								<div class="col-md-12 product_box">
-									<div class="col-md-3 product_select"><img style="width:25px" src="http://imageshack.com/a/img538/4066/AuggaK.png"></div>
-									<img class="product_img" style="max-height:210px; max-width:190px" src="<%=product.imglink %>" alt="...">
-
-									<div class="caption">
-										<!--<p class="text-center"><span><%= product.brand %></span></p>-->
-										<div class="col-md-12 product_name ellip"><span><%= product.name %></span></div>
-										<p id="product-<%= product.id %>" class="text-center">
-											<a class="col-md-6 eval_bt btn btn-rate rate-like" role="button">좋아함</a>
-											<a class="col-md-6 eval_bt btn btn-rate rate-dislike" role="button">싫어함</a>
-											<div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span>
-												<br>관심취향</div>
-											<div class="col-md-6 product_span"><span class="glyphicon glyphicon-user"></span>
-												<br>코멘트보기</div>
-										</p>
-									</div>
-								</div>
-						</div>
-					<% end %>
-					</div>
-				</div>
-			</div>
-		</div>
 
 
 
@@ -92,18 +133,11 @@
 
 
 			<script type="text/javascript">
-				<% @evaluations.each do |evaluation | %>
-						var parent = document.getElementById("product-<%= @products.find(evaluation.product_id).id%>"); <%
-					if evaluation.rate == 1 %>
-					parent.querySelector(".rate-like").className += " active"; <% elsif evaluation.rate == 0 %>
-					parent.querySelector(".rate-soso").className += " active"; <% elsif evaluation.rate == -1 %>
-					parent.querySelector(".rate-dislike").className += " active"; <% elsif evaluation.rate == 5 %>
-					parent.querySelector(".rate-wish").className += " active"; <% end %>
-					<% end %>
+			
 
-					$(".rate-like").click(function(event) {
-						postRate(event, 1);
-					});
+				$(".rate-like").click(function(event) {
+					postRate(event, 1);
+				});
 
 				$(".rate-soso").click(function() {
 					postRate(event, 0)
@@ -119,12 +153,15 @@
 
 
 
+				$('.dropdown-toggle').dropdown()
 
 
 
 				function postRate(event, score) {
 					var button = $(event.target);
 					var allbuttons = $(event.target).parent().children("a");
+					var heart = $(event.target).parent().parent().parent().children(".product_select").children("span");
+					var bookmark = $(event.target).parent().parent().parent().children(".product_wish").children("span");
 					var evarcard = $(event.target).parent().parent().parent().parent();
 					var productid = evarcard[0].getAttribute('product-id')
 					event.preventDefault();
@@ -140,11 +177,32 @@
 							var isCanceling = button.hasClass("active");
 							allbuttons.removeClass("active");
 							if (isCanceling) {
+								if(score == 5){
+									bookmark.removeClass();
+									bookmark.addClass("bookmark-empty");
+								}
+								else{
+									heart.removeClass();
+									heart.addClass("heart-empty");
+								}
+								
 								$("#click-cancel").removeClass("in").show();
 								$("#click-cancel").delay(1000).addClass("in").fadeOut(500);
 							}
 							else {
 								button.addClass("active");
+								
+								if(score == 1){
+									heart.removeClass();
+									heart.addClass("heart-like");
+								}
+								else if(score == -1){
+									heart.removeClass();
+									heart.addClass("heart-dislike");
+								}
+								else if(score == 5){
+									bookmark.addClass("bookmark")
+								}
 								$("#click-save").removeClass("in").show();
 								$("#click-save").delay(1000).addClass("in").fadeOut(500);
 							}
@@ -154,20 +212,24 @@
 				}
 			</script>
 
-			<div id="click-save" class="alert alert-success alert-click fade" role="alert">
+			<div id="click-save" class="alert-click fade" role="alert">
 				<strong>저장되었습니다.</strong>
 			</div>
-			<div id="click-cancel" class="alert alert-success alert-click fade" role="alert">
+			<div id="click-cancel" class="alert-click fade" role="alert">
 				<strong>취소되었습니다.</strong>
 			</div>
 
 
 			<style>
+
+			   
 				.alert-click {
 					position: fixed;
 					top: 10%;
 					left: 45%;
 					width: 10%;
 					text-align: center;
+					border-radius: 6px;
+					background-color: black;
 				}
 			</style>
