--- a/app/views/home/mypage.erb
+++ b/app/views/home/mypage.erb
@@ -1,71 +1,89 @@
+<div class="navbar-fixed-top">
 
-<!-- main menu -->
-<a href="/users/sign_in"><%= image_tag("home.png", :class => "home_logo") %></a>
-<nav id="navbar" class="navbar navbar-fixed-top">
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 col-sm-3 col-xs-6"></div>
-    <div class="col-md-4 col-sm-8 col-xs-6">
-      <div class="navbar-center">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="evalpage">Smelling</a></li>
-          <li><a href="mypage"> <%=@user.email%> </a> </li>
-          <li><a href='/users/sign_out'> Log out </a> </li>
-        </ul>
+  <!-- main menu -->
+  <a href="/users/sign_in">
+    <%=image_tag( "home.png", :class=> "home_logo") %></a>
+  <nav id="navbar" class="navbar nav-top">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8 col-sm-3 col-xs-6"></div>
+        <div class="col-md-4 col-sm-8 col-xs-6">
+          <div class="navbar-center">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="evalpage">Smelling</a></li>
+              <li>
+                <a href="mypage">
+                  <%=@user.email%>
+                </a>
+              </li>
+              <li><a href='/users/sign_out'> Log out </a> </li>
+            </ul>
+          </div>
+        </div>
+        <div class=" col-sm-1 "></div>
       </div>
     </div>
-    <div class="col-md-4 col-sm-1"></div>
-  </div>
-</div>
-</nav>
-<!-- main menu end -->
+  </nav>
+  <!-- main menu end -->
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12 profile_bg">
-      
-      <div class="col-md-4"></div>
-      <div class="col-md-4 profile_div">
-        <img class="img-circle profile_img" src="https://scontent.cdninstagram.com/hphotos-xaf1/t51.2885-15/s320x320/e15/11313370_1434376700214927_1359520543_n.jpg">
-        <br><br><%=@user.email%>
-      </div>
-      <div class="col-md-4"></div>
-      
-      <!--%= image_tag("background.jpg", :class => "profile_bg_img") %-->
-    </div>
-  </div>
-</div>
+  <!-- user index -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 profile_bg">
 
-<nav id="navbar" class="navbar">
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <div class="navbar-center">
-        <ul class="nav navbar-nav">
-          <li><a href="#">SmellBox</a></li>
-          <li><a href="mypage">Recommend</a></li>
-          <li><a href="mypage">Mysmell</a> </li>
-        </ul>
+        <div class="col-md-4"></div>
+        <div class="col-md-4 profile_div">
+          <img class="img-circle profile_img" src="https://scontent.cdninstagram.com/hphotos-xaf1/t51.2885-15/s320x320/e15/11313370_1434376700214927_1359520543_n.jpg">
+          <br>
+          <br>
+          <%=@user.email%>
+        </div>
+        <div class="col-md-4"></div>
+
+        <!--%= image_tag("background.jpg", :class => "profile_bg_img") %-->
       </div>
     </div>
-    <div class="col-md-4"></div>
   </div>
+  <!-- user index end -->
+
+  <!-- low menu -->
+  <nav id="navbar" class="navbar nav-bottom">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8 col-sm-3 col-xs-6"></div>
+        <div class="col-md-4 col-sm-8 col-xs-6">
+          <div class="navbar-center">
+            <ul class="nav navbar-nav">
+              <li role="presentation"><a href="#recommand">추천 취향</a></li>
+              <li role="presentation"><a href="#wish">맡고 싶은 향</a></li>
+              <li role="presentation"><a href="#already">맡아 본 향</a> </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-1"></div>
+      </div>
+    </div>
+  </nav>
+  <!-- low menu end -->
+
 </div>
-</nav>
+<!-- fixed end-->
 
-
-<div class="container-fluid">
-  <div class="row reco">
-    <div class="col-md-12 header_name">Recommand</div>
+<div class="container-fluid" id="recommand">
+  <div class="row reco first_div">
+    <div class="col-md-12 header_name">추천 취향</div>
     <div class="col-md-12">
       <div class="col-md-3 product_div">
         <div class="col-md-12 product_box">
+          <div class="product_crop">
           <img class="product_img" src="http://itemimage.cjmall.com/goods_images/32/890/32384890M.jpg">
-          <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></div>
+          </div>
+          <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></span></div>
           <div class="col-md-12 product_name">플로라 바이 구찌 그레이셔스 튜베로즈 50ML</div>
-          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span><br>관심취향</div>
-          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-user"></span><br>코멘트보기</div>
+          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span>
+            <br>관심취향</div>
+          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-user"></span>
+            <br>코멘트보기</div>
         </div>
       </div>
       <div class="col-md-3 product_div">
@@ -84,135 +102,135 @@
 
 <div class="container-fluid">
   <div class="row select">
-    <div class="col-md-12 header_name">써보고 싶어요</div>
+    <div class="col-md-12 header_name" id="wish">맡고 싶은 향</div>
     <div class="col-md-12">
-    	<% @evaluations.where(rate: 5).each do |evaluation| %>
-      <div class="col-md-2 product_div">
-        <div class="col-md-12 product_box">
-          <img class="product_img" src="<%=@products.find(evaluation.product_id).imglink %>" alt="...">
-          <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></div>
+      <% @evaluations.where(rate: 5).each do |evaluation| %>
+        <div class="col-md-3 product_div">
+          <div class="col-md-12 product_box">
+            <div class="product_crop">
+            <img class="product_img" src="<%=@products.find(evaluation.product_id).imglink %>" alt="...">
+            </div>
+            <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></div>
           <div class="col-md-12 product_name ellip"><%= @products.find(evaluation.product_id).name %></div>
-          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span><br>관심취향</div>
-          <div class="col-md-6 product_span" type="button" data-toggle="modal" data-target="#myModal" 
-          data-productid="<%= @products.find(evaluation.product_id).id %>"
-          data-name = "<%= @products.find(evaluation.product_id).name %>"
-          data-imglink ="<%= @products.find(evaluation.product_id).imglink %>"
-          ><span class="glyphicon glyphicon-user"></span><br>
-          코멘트보기
-</div>
-          
-
-        </div>
-      </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span>
+              <br>관심취향</div>
+            <div class="col-md-6 product_span" type="button" data-toggle="modal" data-target="#myModal" data-productid="<%= @products.find(evaluation.product_id).id %>" data-name="<%= @products.find(evaluation.product_id).name %>" data-imglink="<%= @products.find(evaluation.product_id).imglink %>"><span class="glyphicon glyphicon-user"></span>
+              <br> 코멘트보기
+            </div>
 
 
-
-<div class="container-fluid">
-  <div class="row select">
-    <div class="col-md-12 header_name">써봤어요</div>
-    <div class="col-md-12">
-    	<% @evaluations.where(rate:1).each do |evaluation| %>
-      <div class="col-md-2 product_div">
-        <div class="col-md-12 product_box">
-          <img class="product_img" src="<%=@products.find(evaluation.product_id).imglink %>" alt="...">
-          <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></div>
-          <div class="col-md-12 product_name ellip"><%= @products.find(evaluation.product_id).name %></div>
-          <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span><br>관심취향</div>
-          <div class="col-md-6 product_span" type="button" data-toggle="modal" data-target="#myModal" 
-          data-productid="<%= @products.find(evaluation.product_id).id %>"
-          data-name = "<%= @products.find(evaluation.product_id).name %>"
-          data-imglink ="<%= @products.find(evaluation.product_id).imglink %>"
-          ><span class="glyphicon glyphicon-user"></span><br>
-          코멘트보기
-</div>
-          
-
-        </div>
-      </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-
-
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">코멘트 보기 </h4>
-      </div>
-      <div class="container-fluid">
-        <div class="text-center">
-        asdf
-        <img id="comment_product_img" alt="...">
-
-        </div>
-        <br>
-        <input class="form-control" id="comment" name="comment" placeholder="이 제품에 대한 코멘트를 남겨주세요." type="text" />
-
-            
-      </div>
-      <div class="container">
-        <% @comments.each do |comment| %>
-        <div>
-           <br>
-          <span><%= @users.find(comment.user_id).email %> 님의 댓글</span>
-          <span><%= comment.comment_text %></span>
-           <br>
+          </div>
         </div>
         <% end %>
-      </div>
     </div>
   </div>
 </div>
 
-<script>
-  $('#myModal').on('show.bs.modal', function (event) {
-  var button = $(event.relatedTarget) // Button that triggered the modal
-  var productid = button.data('productid') 
-  var name = button.data('name')
-  var imglink = button.data('imglink')
-  var modal = $(this)
-  modal.find('.modal-title').text(name);
-  modal.find('#comment').attr("product-id", productid);
-  modal.find('#comment_product_img').attr("src",imglink);
-
-})
-
-  jQuery(function () { 
-	$("#comment").keyup(function(event){
-		if(event.keyCode == 13){
-			var comment = $("#comment").val();
-			var productid = $("#comment").attr("product-id");
-			postComment(event, comment, productid);
-			
-		}
-	})
-});
-
-
-function postComment(event, comment, productid){
-   
-		event.preventDefault();
-
-  		$.ajax({
-  			type: "POST",
-  			url: "/postcomment",
-  			data: { product_id: productid, comment_text: comment },
-  			success: function(result) {
-  			  alert("Comment success!");
-    		}
-    	});
-	}
 
 
 
-</script>
+
+
+
+  <div class="container-fluid" id="already">
+    <div class="row already">
+      <div class="col-md-12 header_name">맡아 본 향</div>
+      <div class="col-md-12">
+        <% @evaluations.where(:rate=> -1..1).each do |evaluation| %>
+          <div class="col-md-3 product_div">
+            <div class="col-md-12 product_box">
+              <div class="product_crop">
+              <img class="product_img" src="<%=@products.find(evaluation.product_id).imglink %>" alt="...">
+              </div>
+              <div class="col-md-12 product_select"><span class="glyphicon glyphicon-heart"></div>
+              <div class="col-md-12 product_name ellip"><%= @products.find(evaluation.product_id).name %></div>
+              <div class="col-md-6 product_span"><span class="glyphicon glyphicon-bookmark"></span>
+                <br>관심취향</div>
+              <div class="col-md-6 product_span" type="button" data-toggle="modal" data-target="#myModal" data-productid="<%= @products.find(evaluation.product_id).id %>" data-name="<%= @products.find(evaluation.product_id).name %>" data-imglink="<%= @products.find(evaluation.product_id).imglink %>"><span class="glyphicon glyphicon-user"></span>
+                <br> 코멘트보기
+              </div>
+            </div>
+          </div>
+          <% end %>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">코멘트 보기 </h4>
+        </div>
+        <div class="container-fluid">
+          <div class="text-center">
+            asdf
+            <img id="comment_product_img" alt="...">
+
+          </div>
+          <br>
+          <input class="form-control" id="comment" name="comment" placeholder="이 제품에 대한 코멘트를 남겨주세요." type="text" />
+
+
+        </div>
+        <div class="container">
+          <% @comments.each do |comment| %>
+            <div>
+              <br>
+              <span><%= @users.find(comment.user_id).email %> 님의 댓글</span>
+              <span><%= comment.comment_text %></span>
+              <br>
+            </div>
+            <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    $('#myModal').on('show.bs.modal', function(event) {
+      var button = $(event.relatedTarget) // Button that triggered the modal
+      var productid = button.data('productid')
+      var name = button.data('name')
+      var imglink = button.data('imglink')
+      var modal = $(this)
+      modal.find('.modal-title').text(name);
+      modal.find('#comment').attr("product-id", productid);
+      modal.find('#comment_product_img').attr("src", imglink);
+
+    })
+
+    jQuery(function() {
+      $("#comment").keyup(function(event) {
+        if (event.keyCode == 13) {
+          var comment = $("#comment").val();
+          var productid = $("#comment").attr("product-id");
+          postComment(event, comment, productid);
+
+        }
+      })
+    });
+
+
+    function postComment(event, comment, productid) {
+
+      event.preventDefault();
+
+      $.ajax({
+        type: "POST",
+        url: "/postcomment",
+        data: {
+          product_id: productid,
+          comment_text: comment
+        },
+        success: function(result) {
+          alert("Comment success!");
+        }
+      });
+    }
+  </script>
 
 
